# Orchitect

./: .gitignore  README.md  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deleteme.yml
client/Conductor.Client.Cli/: Cargo.toml
client/Conductor.Client.Web/: package.json  pnpm-lock.yaml
engine/: Conductor.Engine.sln  Conductor.sln  global.json
engine/Conductor.Engine.AppHost/: Conductor.Engine.AppHost.csproj
engine/Conductor.ServiceDefaults/: Conductor.ServiceDefaults.csproj
engine/docs/: Conductor Api - Bruno.json  INFRASTRUCTURE_STATE_MANAGEMENT.md  MERGING.md
engine/scripts/: efm.sh
platform/: CLAUDE.md  Conductor.sln  Directory.Build.props  Orchitect.sln  stryker-config.json
platform/.aspire/: settings.json
platform/docs/: CREDENTIAL_FEATURE_PLAN.md  DISCOVERY_CREDENTIAL_INTEGRATION_PLAN.md  HIGH_LEVEL_ARCHITECTURE.md  High Level Diagram.drawio  INFRASTRUCTURE_STATE_MANAGEMENT.md  INVENTORY_INTEGRATION_CONFIG_PLAN.md  INVENTORY_SAVEDATA_DB.md  JWT_BEST_PRACTICES.md  MERGING.md  Orchitect Api - Bruno.json  PROVISIONING_ISOLATION_ARCHITECTURE.md  RESOURCE_DOMAIN_PROVISIONING_PHASE_1_OUTSTANDING.md  RESOURCE_DOMAIN_REFACTOR_PLAN.md  RESOURCE_DOMAIN_REFACTOR_PLAN_PHASE_2.md
platform/scripts/: efm.sh  setup.sh
portals/Conductor.Portal.Cli/: Cargo.toml  README.md  sonar-project.properties
portals/Conductor.Portal.Cli/src/: command.rs  login.rs
portals/Conductor.Portal.Web/: .env.template  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  sonar-project.properties
(+1251 files in other folders)
