[package]
name = "conductor-client-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cdr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
