[package]
name = "conductor-portal-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cdr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.48.0", features = ["full"] }
